samples/_failures_safe/1761594766_f5c550_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b2ee4a7.c: In function ‘main’:
./samples/SAFE/__tmp_7b2ee4a7.c:159:16: error: expected identifier at end of input
  159 |                token.
      |                ^~~~~
./samples/SAFE/__tmp_7b2ee4a7.c:159:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7b2ee4a7.c:159:16: error: expected declaration or statement at end of input
